# QuantumExpression

./: .gitignore  CMakeLists.txt  README.md  Readme.md
include/: FastPauliString.hpp  FermionOperator.hpp  PauliOperator.hpp  QuantumExpression.hpp  QuantumString.hpp  QuantumString_multiplication.hpp  Spins.hpp  bit_operations.hpp  functions.hpp
python-bindings/: CMakeLists.txt  main.cpp  setup.py
python-bindings/QuantumExpression/: __init__.py  add_json.py  add_methods.py  factories.py  hopping_matrix.py  jordan_wigner.py  main.cpp
source/: main.cpp
test/: CMakeLists.txt  test.cpp
